--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,17 +1,20 @@
 @import "tailwindcss";
 
-/* :root {
-  --background: #ffffff;
-  --foreground: #171717;
+:root {
+  --primary-color: #2671e2;
+  --secondary-color: #26e297;
+  --accent_color:  #8bbc27;
+  /* --background: #ffffff;
+  --foreground: #171717; */
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
-
 html,
 body {
   max-width: 100vw;
@@ -41,4 +44,4 @@ a {
   html {
     color-scheme: dark;
   }
-} */
+} */ */
